Bam CTAS/IAS support and container persistent storage (#113)
* BDGInputDataType

* Passing ctas source dir

* Optimization rule

* Optimization rule rewritten

* Basic BAM CTAS

* CTAS refactoring

* BAM CTAS FST serialization added

* Basic IAS support

* CTAS/IAS documentation

* bdg_grange tvf

* GRanges fix test

* Unit tests general cleanup

* Added bdg-sequila-lite image

* SequilaThrift UI fix

* Jenkinsfile fix

* sbt memory increase

* sbt memory increase

* Trift security fix

* Trift security fix

* Lazy SAMRecord projection - only for CTAS/IAS statements

* SequilaDataSourceStrategy placeholder added

* optimized scan for queries like SELECT (distinct )sampleId FROM  BDGAlignmentRelation do not touch files, only files metadata

* sequence fix

* enable hivesupport

* Thrift fix single session problem resolved.

* Container metastore persistance